Fixed tests for Cat